kubernetes/clusters/macmini/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: radarr-ui
      protocol: TCP
      port: 7878
      targetPort: 7878
  type: ClusterIP
  clusterIP: None
