kubernetes/clusters/macmini/media/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.service.blizzard.consul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
